# g4spect_unit

./: .gitattributes  .gitignore  CMakeLists.txt  G4SPECT.cc  README.md  RUNNING_G4SPECT.md
docs/superpowers/plans/: 2026-07-16-mird-human-phantom.md
docs/superpowers/specs/: 2026-07-16-mird-human-phantom-design.md
include/: SpectActionInitialization.hh  SpectDetectorConstruction.hh  SpectDicomPhantom.hh  SpectEventAction.hh  SpectHit.hh  SpectMirdHumanPhantom.hh  SpectPhysicsList.hh  SpectPrimaryGeneratorAction.hh  SpectRunAction.hh  SpectSensitiveDetector.hh
mac/: export_geometry_tracks_ShowAllBeam.mac  export_geometry_tracks_ShowDetectedBeam.mac  export_geometry_vrml.mac  tc99m_beam_smoke.mac  tc99m_point_iso.mac
src/: SpectActionInitialization.cc  SpectDetectorConstruction.cc  SpectDicomPhantom.cc  SpectEventAction.cc  SpectHit.cc  SpectMirdHumanPhantom.cc  SpectPhysicsList.cc  SpectPrimaryGeneratorAction.cc  SpectRunAction.cc  SpectSensitiveDetector.cc
tests/: smoke_build_and_run.sh  test_detector_geometry_config.py  test_vrml_to_obj.py
tools/: vrml_to_obj.py
visualization/: SPECT_geometry_3D.html
